Project arkrealtors {
  database_type: 'PostgreSQL'
  Note: '''
    # Ark-realtors Database
  '''
}

Table users {
  id uuid [pk]
  username varchar [unique, not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  hashed_password varchar [not null]
  role varchar [not null, default: 'user']
  password_changed_at timestamptz [not null, default: "0001-01-01 00:00:00Z"]
  created_at timestamptz [not null, default: `now()`]
}

Table property {
  id uuid [pk, ref: > users.id]
  type varchar [not null, note: 'rent, sale']
  price numeric(7,2) [not null]
  status varchar [not null, default: "available"]
  bedroom int [not null]
  bathroom int [not null]
  location varchar [not null]
  size varchar [not null]
  contact varchar [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table pictures {
  id uuid [pk]
  property_id uuid [ref: > property.id,not null]
  img_url varchar [not null]
  description varchar [not null]
}



Table sessions {
  id uuid [pk]
  username varchar [not null, ref: > users.username]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}
